# rattlebrain

./: .gitignore  Cargo.toml  README.md  TODO.md  parse.py  rattlebrain  replay_schema.json  rl_replay_ai
.github/workflows/: ci.yml
examples/: 363cf8d9-8d7f-4c55-95a8-b97edbab0449.replay  feedback.md  test.csv
output/: frame_chunk_0.json  frame_chunk_1.json  frame_chunk_10.json  frame_chunk_11.json  frame_chunk_12.json  frame_chunk_13.json  frame_chunk_14.json  frame_chunk_15.json  frame_chunk_16.json  frame_chunk_17.json  frame_chunk_18.json  frame_chunk_19.json  frame_chunk_2.json  frame_chunk_20.json  frame_chunk_3.json  frame_chunk_4.json  frame_chunk_5.json  frame_chunk_6.json  frame_chunk_7.json  frame_chunk_8.json  frame_chunk_9.json  goals.json  metadata.json  player_stats.json
src/: ai.rs  analysis.rs  analyzer.rs  claude.rs  convert.rs  csv_export.rs  extract.rs  lib.rs  main.rs  plot.rs  query.rs  replay_parser.rs  types.rs  utils.rs
src/ai/: anthropic.rs  claude.rs  generic.rs  google.rs  mod.rs  openai.rs
tests/: ai_tests.rs  analysis_tests.rs  convert_tests.rs  extract_tests.rs  main_tests.rs  query_tests.rs  valid.replay
