[package]
name = "rattlebrain"
version = "0.1.2"
edition = "2021"
authors = ["Scott Davis <scottleedavis@gmail.com>"]
description = "A Rocket League replay analyzer using Multiple AI agents"
license = "MIT"
repository = "https://github.com/scottleedavis/rattlebrain"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
jsonschema = "0.16"
plotters = "0.3"

[lib]
name = "rattlebrain"
path = "src/lib.rs"
